--- a/must-have/Основные_конструкции_С++.md
+++ b/must-have/Основные_конструкции_С++.md
@@ -20,7 +20,7 @@ auto b = 0;
 auto c = {3.14156};
 auto d(1.41421f);
 ```
-Типо должен быть, исходя из инициализируемого значения. Смотрим на тип выражения справа, на категорию или (если там переменная) "как было объявлено" - не смотрим
+Тип должен быть, исходя из инициализируемого значения. Смотрим на тип выражения справа, на категорию или (если там переменная) "как было объявлено" - не смотрим
 
 ## `range-based for`, в том числе с `auto&` и `const auto&`
 ```C++
