--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -127,7 +127,7 @@ int main() {
     d.Base::foo();  // Link error.
 }
 ```
-Виртуальные методы можно сделать final, чтобы в наследнике наследника его переопределить не получилось:
+Виртуальные методы можно сделать `final`, чтобы в наследнике наследника его переопределить не получилось:
 ```C++
 struct Base {
     virtual void foo() = 0;
