--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -185,7 +185,7 @@ std::vector<std::unique_ptr<Human>> people;
 Каждый элемент вектора - указатель на Human и Student, тогда объекты могут иметь разные типы, занимать разное место в памяти, а вектору норм, потому что он знает размер указателя. При удалении вектор вызовет деструктор у умных указателей, а они вызовут удаление у всех объектов (здесь нужны виртуальные деструкторы). Без указателя будет `slicing`
 
 ## `dynamic_cast` для полиморфных классов (по указателям и ссылкам)
-`dynamic_cast` позволяет проверить реальный (динамический) тип объекта, на который показывает ссылка/указатель. Почему может отличаться от выясненного на этапе компиляции: как раз из-за наследования. Вот лежит `Base*`, а по факту там может быть аж целый `Derived1`. В случае с указателями `dynamic_cast` возвращает либо `nullptr`, если конвертация прошла неуспешно, в другом случае возвращает указатель. Со ссылками аналогично, только при сбое выкидывает `std::bad_cast` (так как не бывает "нулевой ссылки")
+`dynamic_cast` позволяет проверить реальный (динамический) тип объекта, на который показывает ссылка/указатель. Почему может отличаться от выясненного на этапе компиляции: как раз из-за наследования. Вот лежит `Base*`, а по факту там может быть аж целый `Derived`. В случае с указателями `dynamic_cast` возвращает либо `nullptr`, если конвертация прошла неуспешно, в другом случае возвращает указатель. Со ссылками аналогично, только при сбое выкидывает `std::bad_cast` (так как не бывает "нулевой ссылки")
 
 `dynamic_cast` работает только если `Base` - полиморфный (потому что создается таблица виртуальных функций и в ней мы можем сравнить указатели). 
 ```C++
